fix(android): keep OpenCC helper API 26 compatible